# berryscript

./: .gitignore  CMakeLists.txt  README.md  core.sp  employee.sp  makefile  manager.sp  out.c  test.sp
.VSCodeCounter/2022-11-12_12-59-47/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
cli/: cli.c
compiler/: compiler.c  compiler.h  debug.c  debug.h
gc/: gc.c
include/: common.h  utils.c  utils.h
object/: class.c  class.h  obj_fn.c  obj_fn.h  obj_list.c  obj_list.h  obj_map.c  obj_map.h  obj_string.c  obj_string.h  obj_thread.h  value.c  value.h
parser/: parser.c  parser.h
src/: dataBuffer.cpp  dataBuffer.h  main.cc  main.cpp  parser.cc  parser.cpp  parser.h  token.list  utils.cc  utils.cpp  utils.h  vm.cc  vm.cpp  vm.h
src/object/: class.h  header.cc  header.h  obj_class.cc  obj_class.h  obj_fn.cc  obj_fn.h  obj_header.h  obj_list.cc  obj_list.h  obj_map.cc  obj_map.h  obj_meta.h  obj_range.cc  obj_range.h  obj_string.cc  obj_string.h  obj_thread.cc  obj_thread.h
tests/: test011.js  test013.js  test015.js  test016.js  test019.js  test024.js
vm/: core.c  core.script.inc  opcode.inc  vm.c  vm.h
